--- a/package.json
+++ b/package.json
@@ -17,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/kikaiaku/express-handlebars.io/issues"
   },
-  "homepage": "https://github.com/kikaiaku/express-handlebars.io#readme"
+  "homepage": "https://github.com/kikaiaku/express-handlebars.io#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
+    "method-override": "^3.0.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.4",
+    "process": "^0.11.10"
+  }
 }
