--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 JAWSDB_URL = mysql://sl1s2ykfr5ivdv51:k0jtlwzm4i1600nb@a5s42n4idx9husyc.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/wn3rohb8dari9imp
+CLIENTPORT = 8080
+SERVERPORT = 3306
