--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm run build",
     "start": "node server.js"
   },
   "repository": {
@@ -12,7 +13,7 @@
     "url": "git+https://github.com/kikaiaku/express-handlebars.io.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "kikaiaku",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kikaiaku/express-handlebars.io/issues"
