--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 JAWSDB_URL = mysql://n57peymufrcpiovx:tr63sir5axrxr9a3@a5s42n4idx9husyc.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/wunnhs24csx10671
 CLIENTPORT = 8080
 SERVERPORT = 3306
+
+MARIA_URL = mysql://uhzr5kytnsmgujz7:x3v80a42navrdxha@un0jueuv2mam78uv.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dmdxpzng0o91llww
+
+ 
