--- a/.env
+++ b/.env
@@ -2,6 +2,13 @@ JAWSDB_URL = mysql://n57peymufrcpiovx:tr63sir5axrxr9a3@a5s42n4idx9husyc.cbetxkdy
 CLIENTPORT = 8080
 SERVERPORT = 3306
 
-MARIA_URL = mysql://uhzr5kytnsmgujz7:x3v80a42navrdxha@un0jueuv2mam78uv.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dmdxpzng0o91llww
+host=un0jueuv2mam78uv.cbetxkdyhwsb.us-east-1.rds.amazonaws.com	
+user=uhzr5kytnsmgujz7
+password=x3v80a42navrdxha
+database=dmdxpzng0o91llww
+
+
+
+
 
  
