tests on ta's info

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 
 
-host=un0jueuv2mam78uv.cbetxkdyhwsb.us-east-1.rds.amazonaws.com	
-user=uhzr5kytnsmgujz7
-password=x3v80a42navrdxha
-database=dmdxpzng0o91llww
+host=a5s42n4idx9husyc.cbetxkdyhwsb.us-east-1.rds.amazonaws.com		
+user=n57peymufrcpiovx
+password=tr63sir5axrxr9a3
+database=wunnhs24csx10671
 
 
 
