--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+JAWSDB_URL=mysql://n57peymufrcpiovx:tr63sir5axrxr9a3@a5s42n4idx9husyc.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/wunnhs24csx10671
+
 host=a5s42n4idx9husyc.cbetxkdyhwsb.us-east-1.rds.amazonaws.com		
 user=n57peymufrcpiovx
 password=tr63sir5axrxr9a3
